--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="E8AE68">
     <title>Javascript Calculator</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -14,9 +15,9 @@
         <div id="calculator">
             <div id="result">
                 <div id="history">
-                    <p id="history-value">9*9</p>
+                    <p id="history-value"></p>
                     <div id="output">
-                        <p id="output-value">81</p>
+                        <p id="output-value">0</p>
                     </div>
                 </div>
             </div>
